<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoIrc5_Config_v_1_x_x" Id="{512a91a8-257b-4c22-bb6b-f1a6a77e1532}">
    <Declaration><![CDATA[TYPE
    TcoIrc5_Config_v_1_x_x :
    STRUCT
        InfoTime : TIME := T#2S;
        ErrorTime : TIME := T#5S;
		IpAddress : STRING;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>